Added Army Ability

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -14,3 +14,10 @@
 /Inventory$7.class
 /Tank.class
 /images/
+/Sniper.class
+/Accurate.class
+/MoreAccurate.class
+/MultiSniper.class
+/SnipeLead.class
+/Support.class
+/Army.class
