--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,23 +1,49 @@
-/WorldSelect.class
-/WorldSelect$1.class
-/WorldSelect$2.class
-/WorldSelect$3.class
-/WorldSelect$4.class
-/Inventory.class
+/Ability.class
+/Accurate.class
+/Ammos.class
+/Army.class
+/Assets.class
+/Basic.class
+/BlackHole.class
+/Carrier.class
+/CustomButton$1.class
+/CustomButton.class
+/Entity.class
+/Fighter.class
+/Firework.class
 /Inventory$1.class
 /Inventory$2.class
 /Inventory$3.class
 /Inventory$4.class
-/Start$2.class
 /Inventory$5.class
 /Inventory$6.class
 /Inventory$7.class
-/Tank.class
-/images/
-/Sniper.class
-/Accurate.class
+/Inventory.class
+/Keys.class
+/LevelSelect$1.class
+/LevelSelect$2.class
+/LevelSelect$3.class
+/LevelSelect.class
+/MediumFighter.class
 /MoreAccurate.class
 /MultiSniper.class
+/Player.class
+/Scout.class
+/Screen.class
 /SnipeLead.class
+/Sniper.class
+/SpaceshipWars.class
+/Spawner.class
+/Speedy.class
+/Stars.class
+/Start$1.class
+/Start$2.class
+/Start.class
 /Support.class
-/Army.class
+/Tank.class
+/World1Boss.class
+/WorldSelect$1.class
+/WorldSelect$2.class
+/WorldSelect$3.class
+/WorldSelect$4.class
+/WorldSelect.class
