Added enemy info page

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -4,3 +4,12 @@
 /LevelSelect$4.class
 /Screen$1.class
 /Screen$2.class
+/Info$1.class
+/Info$2.class
+/Info$3.class
+/Info$4.class
+/Info$5.class
+/Info$6.class
+/Info$7.class
+/Info.class
+/Start$3.class
