Added Settings Page

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -13,3 +13,10 @@
 /Info$7.class
 /Info.class
 /Start$3.class
+/Start$4.class
+/Settings$1.class
+/Settings$2.class
+/Settings$3.class
+/Settings$4.class
+/Settings$5.class
+/Settings.class
