Added More Accurate Frames per Second Calculation and Fixed Typos

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,22 +1,45 @@
-/End$1.class
-/End$2.class
-/End.class
+/Inventory$1.class
+/Inventory$2.class
+/Inventory$3.class
+/Inventory$4.class
+/Inventory$5.class
+/Inventory$6.class
+/Inventory$7.class
+/Inventory.class
+/Keys.class
+/LevelSelect$1.class
+/LevelSelect$2.class
+/LevelSelect$3.class
 /LevelSelect$4.class
+/LevelSelect.class
+/MediumFighter.class
+/MoreAccurate.class
+/MultiSniper.class
+/Player.class
+/Scout.class
 /Screen$1.class
 /Screen$2.class
-/Info$1.class
-/Info$2.class
-/Info$3.class
-/Info$4.class
-/Info$5.class
-/Info$6.class
-/Info$7.class
-/Info.class
-/Start$3.class
-/Start$4.class
+/Screen.class
 /Settings$1.class
 /Settings$2.class
 /Settings$3.class
-/Settings$4.class
-/Settings$5.class
 /Settings.class
+/SnipeLead.class
+/Sniper.class
+/SpaceshipWars.class
+/Spawner.class
+/Speedy.class
+/Stars.class
+/Start$1.class
+/Start$2.class
+/Start$3.class
+/Start$4.class
+/Start.class
+/Support.class
+/Tank.class
+/World1Boss.class
+/WorldSelect$1.class
+/WorldSelect$2.class
+/WorldSelect$3.class
+/WorldSelect$4.class
+/WorldSelect.class
