--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,43 +1,40 @@
-/Inventory$1.class
-/Inventory$2.class
-/Inventory$3.class
-/Inventory$4.class
-/Inventory$5.class
-/Inventory$6.class
-/Inventory$7.class
-/Inventory.class
-/Keys.class
-/LevelSelect$1.class
-/LevelSelect$2.class
-/LevelSelect$3.class
-/LevelSelect$4.class
-/LevelSelect.class
-/MediumFighter.class
-/MoreAccurate.class
-/MultiSniper.class
-/Player.class
-/Scout.class
 /Screen$1.class
-/Screen$2.class
 /Screen.class
+/SelfRepair.class
 /Settings$1.class
 /Settings$2.class
 /Settings$3.class
+/Settings$4.class
+/Settings$5.class
+/Settings$6.class
 /Settings.class
+/Shield.class
+/ShieldAbility.class
+/ShieldShip.class
 /SnipeLead.class
 /Sniper.class
+/Solve.class
+/SpaceshipWars$1.class
 /SpaceshipWars.class
 /Spawner.class
 /Speedy.class
+/SplitShooter.class
+/Splitter.class
 /Stars.class
 /Start$1.class
 /Start$2.class
 /Start$3.class
 /Start$4.class
+/Start$5.class
 /Start.class
+/StealthShip.class
 /Support.class
 /Tank.class
+/Teleporter.class
 /World1Boss.class
+/World2Boss.class
+/World3Boss.class
+/World4Boss.class
 /WorldSelect$1.class
 /WorldSelect$2.class
 /WorldSelect$3.class
